last commit of the day

--- a/index.html
+++ b/index.html
@@ -16,14 +16,13 @@
   <section class="brand-banner">
     <div class="brand-mark">
       <img
-        src="https://assets.bigcartel.com/theme_images/148459698/Logo+Search+_7_.png?auto=format&fit=max&h=180"
+        src="assets/logo-cropped.png"
         alt="Terra Ignis logomark"
         class="brand-logo"
       />
-      <div class="brand-copy">
-        <p class="brand-name">Terra_Ignis</p>
-        <p class="brand-tag">I like creating stuff with clay, it's healing.</p>
-      </div>
+    </div>
+    <div class="brand-copy stacked">
+      <h2 class="brand-tag">I like making things, it's healing.</h2>
     </div>
   </section>
   <header class="site-header" data-sticky>
@@ -128,6 +127,18 @@
         <figure>
           <img src="https://assets.bigcartel.com/product_images/db7342af-3194-4563-b5a3-c782ad73d685/moon-ashtray.jpg?auto=format&fit=max&w=900" alt="Moon ashtray on linen" />
           <figcaption>Moon Ashtray · €25 · <span class="status-tag status-in">available</span></figcaption>
+        </figure>
+        <figure>
+          <img src="https://assets.bigcartel.com/product_images/320d7221-150d-4ca5-bff5-e53f08f23328/balaclava-ashtray.jpg?auto=format&fit=max&w=900" alt="Balaclava ashtray with biker illustration" />
+          <figcaption>Balaclava Ashtray · €23 · <span class="status-tag status-in">available</span></figcaption>
+        </figure>
+        <figure>
+          <img src="https://assets.bigcartel.com/product_images/f70ae1e2-3084-4a07-8562-0852f03510cf/dagger-ashtray.jpg?auto=format&fit=max&w=900" alt="Dagger ashtray on wooden surface" />
+          <figcaption>Dagger Ashtray · €27 · <span class="status-tag status-in">available</span></figcaption>
+        </figure>
+        <figure>
+          <img src="https://assets.bigcartel.com/product_images/67b02dca-1ac7-43b9-8b40-715f45da3604/euclid-mug.jpg?auto=format&fit=max&w=900" alt="Euclid mug with forest glaze" />
+          <figcaption>Euclid Mug · €20 · <span class="status-tag status-in">available</span></figcaption>
         </figure>
       </div>
     </section>
