feat: refresh intro styling

--- a/index.html
+++ b/index.html
@@ -10,21 +10,14 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div class="floating-logo" aria-hidden="true">
-    <img src="https://assets.bigcartel.com/theme_images/148459698/Logo+Search+_7_.png?auto=format&fit=max&h=240" alt="" />
+  <div class="brand-floating">
+    <img
+      src="assets/logo-cropped.png"
+      alt="Terra Ignis logomark"
+      class="brand-logo"
+    />
+    <p class="brand-tag">I like making things, it's healing.</p>
   </div>
-  <section class="brand-banner">
-    <div class="brand-mark">
-      <img
-        src="assets/logo-cropped.png"
-        alt="Terra Ignis logomark"
-        class="brand-logo"
-      />
-    </div>
-    <div class="brand-copy stacked">
-      <h2 class="brand-tag">I like making things, it's healing.</h2>
-    </div>
-  </section>
   <header class="site-header" data-sticky>
     <nav class="primary-nav" aria-label="Primary">
       <button class="nav-toggle" aria-expanded="false" aria-controls="nav-list">Menu</button>
