Refresh palette and gallery interactions

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <button class="nav-toggle" aria-expanded="false" aria-controls="nav-list">Menu</button>
       <ul id="nav-list">
         <li><a href="#collections">Collection</a></li>
-        <li><a href="#lookbook">Lookbook</a></li>
+        <li><a href="#gallery">Gallery</a></li>
         <li><a href="#story">Story</a></li>
         <li><a href="#journal">Journal</a></li>
         <li><a href="#contact">Contact</a></li>
@@ -45,24 +45,19 @@
         <h1>Ceramics made from Greece brought to you by Marialenas Gomenos!</h1>
         <p>This preview pulls real listings from the Big Cartel shop so you can plan reservations before payments go live here. Every piece is hand-built, hand-painted, and rooted in the same motifs you see across @terra__ignis.</p>
         <div class="hero-cta">
-          <button class="primary" data-action="notify">Get first access</button>
-          <button class="ghost" data-action="viewLookbook">Browse lookbook</button>
+          <button class="ghost" data-action="viewGallery">Browse gallery</button>
         </div>
         <dl class="hero-stats">
           <div>
             <dt>Studio</dt>
             <dd>t3rra__ignis · Greece</dd>
           </div>
-          <div>
-            <dt>Catalog snapshot</dt>
-            <dd>Synced from Big Cartel RSS feed</dd>
-          </div>
         </dl>
       </div>
       <div class="hero-media">
         <figure>
           <img src="https://assets.bigcartel.com/product_images/67b02dca-1ac7-43b9-8b40-715f45da3604/euclid-mug.jpg?auto=format&fit=max&w=900" alt="Euclid mug resting on linen" />
-          <figcaption>Euclid mug · in stock · direct from t3rraignis.bigcartel.com</figcaption>
+          <figcaption>Euclid mug</figcaption>
         </figure>
       </div>
     </section>
@@ -102,36 +97,36 @@
       <div class="product-grid" id="productGrid" aria-live="polite"></div>
     </section>
 
-    <section class="lookbook" id="lookbook">
+    <section class="gallery" id="gallery">
       <div class="section-heading">
-        <p class="eyebrow">Lookbook</p>
+        <p class="eyebrow">Gallery</p>
         <h2>Scenes pulled from current listings</h2>
         <p>Use these pairings to imagine full table settings before checkout launches.</p>
       </div>
-      <div class="lookbook-grid">
+      <div class="gallery-grid">
         <figure>
           <img src="https://assets.bigcartel.com/product_images/3a6d9e59-ff99-4cd9-a8c7-3b37ed9b46aa/blue-roses-mug.jpg?auto=format&fit=max&w=900" alt="Blue Roses mug styled with florals" />
-          <figcaption>Blue Roses Mug · €23 · currently <span class="status-tag status-out">sold out</span></figcaption>
+          <figcaption>Blue Roses mug</figcaption>
         </figure>
         <figure>
           <img src="https://assets.bigcartel.com/product_images/270c8ef5-a772-4dba-9a86-407c58d9b9a7/felines-ashtray.jpg?auto=format&fit=max&w=900" alt="Felines ashtray with illustrated cats" />
-          <figcaption>Felines Ashtray · €25 · <span class="status-tag status-out">sold out</span></figcaption>
+          <figcaption>Felines ashtray</figcaption>
         </figure>
         <figure>
           <img src="https://assets.bigcartel.com/product_images/db7342af-3194-4563-b5a3-c782ad73d685/moon-ashtray.jpg?auto=format&fit=max&w=900" alt="Moon ashtray on linen" />
-          <figcaption>Moon Ashtray · €25 · <span class="status-tag status-in">available</span></figcaption>
+          <figcaption>Moon ashtray</figcaption>
         </figure>
         <figure>
           <img src="https://assets.bigcartel.com/product_images/320d7221-150d-4ca5-bff5-e53f08f23328/balaclava-ashtray.jpg?auto=format&fit=max&w=900" alt="Balaclava ashtray with biker illustration" />
-          <figcaption>Balaclava Ashtray · €23 · <span class="status-tag status-in">available</span></figcaption>
+          <figcaption>Balaclava ashtray</figcaption>
         </figure>
         <figure>
           <img src="https://assets.bigcartel.com/product_images/f70ae1e2-3084-4a07-8562-0852f03510cf/dagger-ashtray.jpg?auto=format&fit=max&w=900" alt="Dagger ashtray on wooden surface" />
-          <figcaption>Dagger Ashtray · €27 · <span class="status-tag status-in">available</span></figcaption>
+          <figcaption>Dagger ashtray</figcaption>
         </figure>
         <figure>
           <img src="https://assets.bigcartel.com/product_images/67b02dca-1ac7-43b9-8b40-715f45da3604/euclid-mug.jpg?auto=format&fit=max&w=900" alt="Euclid mug with forest glaze" />
-          <figcaption>Euclid Mug · €20 · <span class="status-tag status-in">available</span></figcaption>
+          <figcaption>Euclid mug</figcaption>
         </figure>
       </div>
     </section>
